# async-drop-guard

./: Cargo.toml  README.md
src/: guard.rs  lib.rs  sync_drop.rs
